# listen

./: .gitignore  README.md  audio_processor.py  compose.yaml  config.py  database.py  env.example  main.py  models.py  schemas.py
.cursor/plans/: whisper-queue-ollama_7086c21a.plan.md
.github/workflows/: containers.yml
backend/: Dockerfile  Dockerfile.worker  pyproject.toml  requirements.api.txt  requirements.txt  requirements.worker.txt
backend/app/: config.py  db.py  main.py  models.py  schemas.py
backend/prompts/: action_items_default.md  summary_default.md
backend/worker/: celery_app.py  celery_worker.py  pipeline.py  tasks.py
frontend/: Dockerfile  README.md  nginx.conf  package.json  svelte.config.js  vite.config.js
old/: database.py  diarization_service.py  go.mod  go.sum  llm_service.py  pyproject.toml  requirements.txt  schemas.py  transcriber.py
old/frontend/: package.json
old/frontend/scripts/: clean-old-css.js
old/frontend/src/: App.svelte  api.js  stores.js  utils.js
old/frontend/src/components/: ConversationView.svelte  RenameModal.svelte  Sidebar.svelte  TranscriptTab.svelte
old/internal/config/: config.go
old/internal/db/: db.go
old/internal/http/: router.go
old/internal/jobs/: queue.go
old/internal/migrations/: migrations.go
old/internal/pipeline/: pipeline.go
old/internal/store/: store.go
old/listen/: main.go
old/migrations/: 001_init.sql
old/static/: app.js
old/transcribers/: whisper_transcriber.py
static/: app.js  style.css
templates/: index.html  index_svelte.html
transcribers/: parakeet_transcriber.py
(+44 files in other folders)
